--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: stCarolas/setup-maven@v4.3
+    - name: Maven Build
+      run: mvn package
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag java-spring-crud-mvc-sample:$(date +%s)
