--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,12 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: stCarolas/setup-maven@v4.3
-    - name: Maven Build
+    - uses: actions/checkout@v3
+    - name: Maven and Docker build 
       run:  |
         mvn -B package --file pom.xml
-        ls -l
-        cd target
-        ls -l
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag java-spring-crud-mvc-sample:$(date +%s)
+        docker build . --file Dockerfile --tag java-spring-crud-mvc-sample:$(date +%s)
