--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,9 @@ jobs:
     - uses: actions/checkout@v2
     - uses: stCarolas/setup-maven@v4.3
     - uses: actions/checkout@v3
-    - name: Maven and Docker build 
+    - name: Maven / Docker - build and push 
       run:  |
         mvn -B package --file pom.xml
+        docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}} 
         docker build . --file Dockerfile --tag java-spring-crud-mvc-sample:$(date +%s)
+        docker push ${{secrets.DOCKER_USER}}/java-spring-crud-mvc-sample
