--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,11 @@ jobs:
     - uses: actions/checkout@v2
     - uses: stCarolas/setup-maven@v4.3
     - uses: actions/checkout@v3
-    - name: Maven / Docker - build and push 
+    - name: Maven / Docker - build and push
+      env:
+        TAG: java-spring-crud-mvc-sample:$(date +%s)
       run:  |
         mvn -B package --file pom.xml
         docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}} 
-        docker build . --file Dockerfile --tag java-spring-crud-mvc-sample:$(date +%s)
-        docker push ${{secrets.DOCKER_USER}}/java-spring-crud-mvc-sample
+        docker build . --file Dockerfile --tag $TAG
+        docker push ${{secrets.DOCKER_USER}}/$TAG
