--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,9 +18,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Maven / Docker - build and push
       env:
-        TAG: java-spring-crud-mvc-sample:$(date +%s)
+        TAG: $(date +%s)
       run:  |
         mvn -B package --file pom.xml
         docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}} 
-        docker build . --file Dockerfile --tag $TAG
-        docker push ${{secrets.DOCKER_USER}}/$TAG
+        docker build . --file Dockerfile --tag java-spring-crud-mvc-sample:$TAG
+        docker push ${{secrets.DOCKER_USER}}/java-spring-crud-mvc-sample:$TAG
