--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Maven / Docker - build and push
       run:  |
-        echo TAG_NAME=$(date +%s) >> $GITHUB_ENV
         mvn -B package --file pom.xml
         docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}} 
-        docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/java-spring-crud-mvc-sample:$TAG_NAME
-        docker push ${{secrets.DOCKER_USER}}/java-spring-crud-mvc-sample:$TAG_NAME
+        docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/java-spring-crud-mvc-sample:$(git rev-parse --short "$GITHUB_SHA")
+        docker push ${{secrets.DOCKER_USER}}/java-spring-crud-mvc-sample:$(git rev-parse --short "$GITHUB_SHA")
