--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ management.prometheus.enabled=true
 
 springdoc.swagger-ui.use-root-path=true
 springdoc.swagger-ui.operations-sorter=alpha
+
+spring.jpa.open-in-view=false
